[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://gui/default.tres" type="Theme" id=2]
[ext_resource path="res://sounds/lcomplete.wav" type="AudioStream" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Level" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Theme" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopButton" type="Button" parent="GUI/Theme"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -159.0
margin_bottom = 48.0
text = "STOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Complete" type="Control" parent="GUI/Theme"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/Theme/Complete"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -249.5
margin_top = 8.0
margin_right = 249.5
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SUPERB MECHANISM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="GUI/Theme/Complete"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -151.0
margin_top = -48.0
margin_right = 151.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Complete" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
[connection signal="pressed" from="GUI/Theme/StopButton" to="." method="_on_StopButton_pressed"]
[connection signal="pressed" from="GUI/Theme/Complete/Continue" to="." method="_on_Continue_pressed"]
